[package]
name = "abc428"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-compete.bin]
abc428-a = { alias = "a", problem = "https://atcoder.jp/contests/abc428/tasks/abc428_a" }
abc428-b = { alias = "b", problem = "https://atcoder.jp/contests/abc428/tasks/abc428_b" }
abc428-c = { alias = "c", problem = "https://atcoder.jp/contests/abc428/tasks/abc428_c" }
abc428-d = { alias = "d", problem = "https://atcoder.jp/contests/abc428/tasks/abc428_d" }
abc428-e = { alias = "e", problem = "https://atcoder.jp/contests/abc428/tasks/abc428_e" }
abc428-f = { alias = "f", problem = "https://atcoder.jp/contests/abc428/tasks/abc428_f" }
abc428-g = { alias = "g", problem = "https://atcoder.jp/contests/abc428/tasks/abc428_g" }

[[bin]]
name = "abc428-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc428-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc428-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc428-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc428-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc428-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc428-g"
path = "src/bin/g.rs"

[dependencies]
ac-library-rs = "0.2.0"
aho-corasick = "1.1.3"
alga = "0.9.3"
allocator-api2 = "0.2.21"
amplify = "4.9.0"
amplify_derive = "4.0.1"
amplify_num = "0.5.3"
amplify_syn = "2.0.1"
anyhow = "1.0.99"
# approx = "0.3.2"
approx = "0.5.1"
arbitrary = "1.4.2"
archery = "1.2.1"
argio = "0.2.0"
argio-macro = "0.2.0"
ascii = "1.1.0"
autocfg = "1.5.0"
az = "1.2.1"
bitmaps = "2.1.0"
bitset-fixed = "0.1.0"
bitvec = "1.0.1"
bstr = "1.12.0"
btreemultimap = "0.1.1"
bumpalo = "3.19.0"
bytemuck = "1.23.2"
cfg-if = "1.0.3"
counter = "0.7.0"
deprecate-until = "0.1.1"
easy-ext = "1.0.2"
either = "1.15.0"
equivalent = "1.0.2"
fixedbitset = "0.5.7"
foldhash = "0.1.5"
funty = "2.0.0"
# getrandom = "0.2.16"
getrandom = "0.3.3"
# glam = "0.14.0"
# glam = "0.15.2"
# glam = "0.16.0"
# glam = "0.17.3"
# glam = "0.18.0"
# glam = "0.19.0"
# glam = "0.20.5"
# glam = "0.21.3"
# glam = "0.22.0"
# glam = "0.23.0"
# glam = "0.24.2"
# glam = "0.25.0"
# glam = "0.27.0"
# glam = "0.28.0"
# glam = "0.29.3"
glam = "0.30.5"
glidesort = "0.1.2"
hamming = "0.1.3"
hashbag = "0.1.12"
hashbrown = "0.15.5"
im-rc = "15.1.0"
indexing = "0.4.1"
indexmap = "2.11.0"
integer-sqrt = "0.1.5"
itertools = "0.14.0"
itertools-num = "0.1.3"
itoa = "0.4.8"
js-sys = "0.3.77"
lazy_static = "1.5.0"
leb128 = "0.2.5"
libc = "0.2.175"
libm = "0.2.15"
log = "0.4.27"
maplit = "1.0.2"
matrixmultiply = "0.3.10"
memchr = "2.7.5"
memoise = "0.3.2"
multimap = "0.10.1"
multiversion = "0.8.0"
multiversion-macros = "0.8.0"
# nalgebra = "0.33.2"
nalgebra = "0.34.0"
nalgebra-macros = "0.3.0"
ndarray = "0.16.1"
num = "0.4.3"
num-bigint = "0.4.6"
# num-complex = "0.2.4"
num-complex = "0.4.6"
num-derive = "0.4.2"
num-integer = "0.1.46"
num-iter = "0.1.45"
num-rational = "0.4.2"
num-traits = "0.2.19"
omniswap = "0.1.0"
once_cell = "1.21.3"
# ordered-float = "2.10.1"
ordered-float = "5.0.0"
partial_ref = "0.3.3"
partial_ref_derive = "0.3.3"
paste = "1.0.15"
pathfinding = "4.14.0"
permutohedron = "0.2.4"
petgraph = "0.8.2"
portable-atomic = "1.11.1"
portable-atomic-util = "0.2.4"
ppv-lite86 = "0.2.21"
primal = "0.3.3"
primal-bit = "0.3.2"
primal-check = "0.3.4"
primal-estimate = "0.3.3"
primal-sieve = "0.3.7"
proc-macro2 = "1.0.101"
# proconio = "0.4.5"
proconio = { version = "0.5.0", features = ["derive"] }
proconio-derive = "0.2.1"
quote = "1.0.40"
r-efi = "5.3.0"
radium = "0.7.0"
# rand = "0.8.5"
rand = "0.9.2"
# rand_chacha = "0.3.1"
rand_chacha = "0.9.0"
# rand_core = "0.6.4"
rand_core = "0.9.3"
# rand_distr = "0.4.3"
rand_distr = "0.5.1"
rand_hc = "0.4.0"
rand_pcg = "0.9.0"
rand_xorshift = "0.4.0"
# rand_xoshiro = "0.6.0"
rand_xoshiro = "0.7.0"
rawpointer = "0.2.1"
recur-fn = "2.2.0"
regex = "1.11.2"
regex-automata = "0.4.10"
regex-syntax = "0.8.6"
rpds = "1.1.1"
# rustc-hash = "1.1.0"
rustc-hash = "2.1.1"
rustversion = "1.0.22"
safe_arch = "0.7.4"
semver = "1.0.26"
serde = "1.0.219"
serde_derive = "1.0.219"
simba = "0.9.0"
sized-chunks = "0.6.5"
smallvec = "1.15.1"
static_assertions = "1.1.0"
statrs = "0.18.0"
stringly_conversions = "0.1.1"
superslice = "1.0.0"
syn = "1.0.109"
# syn = "2.0.106"
synstructure = "0.12.6"
tap = "1.0.1"
target-features = "0.1.6"
text_io = "0.1.13"
# thiserror = "1.0.69"
thiserror = "2.0.16"
# thiserror-impl = "1.0.69"
thiserror-impl = "2.0.16"
triomphe = "0.1.14"
typenum = "1.18.0"
unicode-ident = "1.0.18"
unicode-xid = "0.2.6"
varisat = "0.2.2"
varisat-checker = "0.2.2"
varisat-dimacs = "0.2.2"
varisat-formula = "0.2.2"
varisat-internal-macros = "0.2.2"
varisat-internal-proof = "0.2.2"
vec_mut_scan = "0.3.0"
version_check = "0.9.5"
# wasi = "0.11.1"
wasi = "0.14.3"
wasm-bindgen = "0.2.100"
wasm-bindgen-backend = "0.2.100"
wasm-bindgen-macro = "0.2.100"
wasm-bindgen-macro-support = "0.2.100"
wasm-bindgen-shared = "0.2.100"
wide = "0.7.33"
wit-bindgen = "0.45.0"
wyz = "0.5.1"
zerocopy = "0.8.26"
zerocopy-derive = "0.8.26"

[dev-dependencies]
